# mplcyberpunk

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  travis.yml
.github/workflows/: ci-cd.yml  test-deploy.yml
mplcyberpunk/: __init__.py  core.py
mplcyberpunk/data/: cyberpunk.mplstyle
src/mplcyberpunk/: __init__.py  core.py
tests/: test-requirements.txt  tests.py
